preventing a groupPanel text's overlapping by the other toolbar elements (T462998)

--- a/styles/widgets/android5/dataGrid.android5.less
+++ b/styles/widgets/android5/dataGrid.android5.less
@@ -2,6 +2,7 @@
 
 .dx-datagrid-group-panel {
     margin-bottom: @datagrid-header-panel-margin-bottom;
+    font-size: @ANDROID5_BASE_FONT_SIZE;
     .touch-action(pinch-zoom);
 
     .dx-group-panel-message {
