--- a/styles/widgets/common/dataGrid.less
+++ b/styles/widgets/common/dataGrid.less
@@ -8,7 +8,12 @@
 .dx-datagrid-group-panel {
     display: inline-block;
     white-space: nowrap;
+    width: 100%;
     .touch-action(pinch-zoom);
+
+    .dx-group-panel-message {
+        .dx-overflow();
+    }
 
     .dx-group-panel-item {
         display: inline-block;
